--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,9 @@
 .home div.view:nth-of-type(2) {
   background-image: url(../img/paris.jpg);
 }
+.home div.view:nth-of-type(2) h1 {
+  color: #000;
+}
 .home div.companies {
   display: flex;
   align-items: center;
